# scnu-thesis-portal

./: .env.example  .env.production.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  DESIGN.md  Dockerfile.api  README-en.md  README-local.md  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  index.py  pyproject.toml  requirements.txt  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.py
backend/: __init__.py  pyproject.toml
backend/app/: __init__.py  config.py  contracts.py  database.py  errors.py  http_headers.py  main.py  models.py  public_api.py  security.py  storage.py  workbench.py  worker.py
backend/app/parsers/: __init__.py  registry.py
backend/app/services/: __init__.py  export.py  export_registry.py  parse.py  pdf.py  precheck.py
backend/story2paper/: __init__.py  main_s2p.py  paper_store.py
backend/story2paper/agents/: __init__.py  architect.py  base.py  evaluator.py  refiner.py  writer.py
backend/story2paper/api/evaluate/: __init__.py  route.py
backend/story2paper/baselines/: direct_chat.py  story2proposal.py
backend/story2paper/evaluation/: ablation.py  benchmark.py  human_eval.py
backend/story2paper/exporters/: __init__.py  scnu_exporter.py
backend/story2paper/paper/: method_formalizer.py  structure.py  submission.py  writer.py
backend/story2paper/paper/research/experiments/: benchmark_results.json
backend/story2paper/paper/research/figures/: __init__.py  generate_figures.py
backend/story2paper/pipeline/: __init__.py  orchestrator.py
backend/story2paper/shared/: __init__.py  llm_router.py  state.py
docs/: api.md  architecture.md  deploy-vercel.md  homepage-forma-redesign-v1.md  homepage-visual-refine-v1.md  inventory.md  known-limitations-word-export.md  local-mvp-audit.md  local-mvp-plan.md  local-mvp-validation.md  local-validation-word.md  ops-mainland-runbook.md  privacy.md  product-mainline-word-v1.md  public-site.md  quality-checklist-compliance.md  quality-checklist-v2.md  roadmap.md  scnu-undergraduate-format-spec-map.md  vercel-launch-audit.md  vercel-launch-checklist.md  workbench-v1.md  (+1 more)
(+112 files in other folders)
