[project]
name = "scnu-thesis-portal"
version = "0.2.0"
description = "Minimal SCNU undergraduate thesis formatter with precheck and Word export"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-docx>=1.1,<2.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.9,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0"
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
