[project]
name = "forma"
version = "0.2.0"
description = "AI thesis formatting platform with precheck, repair flow, and Word export"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-docx>=1.1,<2.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "sqlalchemy>=2.0.35,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0"
]
story2paper = [
  "langgraph>=0.2.50,<1.0",
  "langgraph-checkpoint>=2.0.1,<3.0",
  "litellm>=1.50,<2.0",
  "openai>=1.54,<2.0",
  "anthropic>=0.38,<1.0",
  "sqlalchemy>=2.0.35,<3.0",
  "aiosqlite>=0.20,<1.0",
  "pyyaml>=6.0.2,<7.0",
  "jinja2>=3.1.4,<4.0",
  "tiktoken>=0.8.0,<1.0",
  "scipy>=1.14.1,<2.0",
  "websockets>=13.1,<14.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
