[project]
name = "scnu-thesis-portal-backend"
version = "0.1.0"
description = "Local MVP backend for SCNU thesis portal"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-docx>=1.1,<2.0",
  "pydantic>=2.8,<3.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
